--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,6 +48,7 @@
 @import 'modules/_neighborhood_tiles.scss';
 @import 'modules/_insight_tile.scss';
 @import 'modules/_agents_tile.scss';
+@import 'modules/_report_tile.scss';
 @import 'modules/_quotes.scss';
 @import 'modules/_service_lists.scss';
 @import 'modules/_faq_list.scss';
