--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -2,10 +2,10 @@
 	<div class="container centered">
 <h1>Our Team</h1>
 <h2>In-depth real estate knowledge. Neighborhood focus &amp; expertise. A clear commitment to your goals. An entire company as your team. We are Garfield.</h2>
-		<div class="grid">
+		<div class="grid-constrained">
 			{{ entries:listing folder="agents" }}
 
-			<div class="grid-3-constrained">
+			<div class="grid-3-constrained-padding">
 				<div>
 				<a href="{{ url }}">
 						<img class="circle" src="{{ path src="{{ image }}" }}"></img>
