--- a/statamic/_themes/main/templates/faq.html
+++ b/statamic/_themes/main/templates/faq.html
@@ -12,7 +12,7 @@
 				{{ faq_items }}
 				{{ if type == "seller_set" }}
 				<div class="cost-block">
-					<a class="expander" href=""><i id="summary_icon" class="fa fa-plus-circle"></i><span class="read-more">{{ info_name }}</span></a>
+					<a class="expander-next green" href=""><i class="fa fa-plus-circle light-gray"></i><span class="large green">{{ info_name }}</span></a>
 					<div style="display: none" class="faq_expanded">{{ info_content }}</div>
 				</div>
 				{{ endif }}
@@ -22,7 +22,7 @@
 				{{ faq_items }}
 				{{ if type == "buyer_set" }}
 				<div class="cost-block">
-					<a class="expander" href=""><i id="summary_icon" class="fa fa-plus-circle"></i><span class="read-more">{{ info_name }}</span></a>
+					<a class="expander-next green" href=""><i class="fa fa-plus-circle light-gray"></i><span class="large green">{{ info_name }}</span></a>
 					<div style="display: none" class="faq_expanded">{{ info_content }}</div>
 				</div>
 				{{ endif }}
