--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -1,10 +1,34 @@
-<div>
-	<h1 style="margin-top: 100px; width: 400px; float: left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit dignissimos, magni delectus. Corporis quos iusto reprehenderit laboriosam eos dolores deserunt enim aut consectetur. Eaque alias id, modi amet quis delectus?</h1>
-	
-		<h1 class="sticky" style="color: red; width: 400px; float: left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
-</div>
+<section class="hero small leading dark">
+	<h1>{{ header }}</h1>
+	<h3>{{ sub_header }}</h3>
+</section>
+<section class="darkest-seafoam-bg">
+	<div class="container reports">
+		<h3 class="centered">OUR LATEST REPORTS</h3>
+		<ul class="grid-constrained">
+			{{ reports limit="6"}}
+				<li class="grid-3-constrained">
+					<a target="_blank" href="{{ report }}" class="report-tile">
+						<h4>{{ report_date }}</h4>
+						<h3>{{ report_title }}</h3>
+						<span>DOWNLOAD <i class="fa fa-angle-down"></i></span>
+					</a >
+				</li>
+			{{ /reports }}
+			</ul>
+			<a class="expander-next green centered" href=""><i class="fa fa-plus-circle light-gray large"></i><span class="large light-gray">More Reports</span></a>
+			<div style="display: none" class="faq_expanded">{{ info_content }}</div>
+			<ul style="display: none" class="grid-constrained">
+				{{ reports limit="6"}}
+					<li class="grid-3-constrained">
+						<a target="_blank" href="{{ report }}" class="report-tile">
+							<h4>{{ report_date }}</h4>
+							<h3>{{ report_title }}</h3>
+							<span>DOWNLOAD <i class="fa fa-angle-down"></i></span>
+						</a >
+					</li>
+				{{ /reports }}
+				</ul>
+		</ul>
+	</div>
+</section>
