updated logic for expanders

--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -6495,6 +6495,7 @@ section.services h3 {
 
 .reports .expander-next {
   margin-top: 60px;
+  margin-bottom: 60px;
   display: block; }
 
 .reports .expander-next:hover span {
