--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -249,7 +249,7 @@
 					{{ summary_intro }}
 					<div style="display: none">{{ summary_full }}</div>
 					{{ if summary_full }}
-					<a class="expander-prev" href=""><i  class="fa fa-plus-circle green"></i><span class="">Read More</span></a>
+					<a class="expander-prev" href=""><i  class="fa fa-plus-circle green"></i><span>Read More</span></a>
 					{{ endif }}
 				</div>
 				{{ endif }}
