--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,7 @@
 @import 'components/_by_the_numbers.scss';
 @import 'components/_faq_aside.scss';
 @import 'components/_company.scss';
+@import 'components/_blog_overview.scss';
 
 // modules
 @import 'modules/_hero.scss';
