--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5922,6 +5922,82 @@ section.services h3 {
 .company.why p {
   margin-top: 0; }
 
+.blog {
+  text-align: center; }
+
+.blog span {
+  text-transform: uppercase; }
+
+.blog a {
+  color: blue; }
+
+.blog .blog-container {
+  position: relative; }
+
+.blog .blog-container:before, .blog .blog-container:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.blog .full-width {
+  background-color: #f7d880;
+  box-sizing: border-box;
+  width: 100%;
+  float: left;
+  padding-left: 1.25%;
+  padding-right: 1.25%; }
+
+.blog .full-width:before, .blog .full-width:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.blog .news-left, .blog .news-right {
+  background-color: #fff; }
+
+.blog .news-left {
+  box-sizing: border-box;
+  width: 66.66667%;
+  float: left;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%; }
+
+.blog .news-right {
+  box-sizing: border-box;
+  width: 33.33333%;
+  float: left;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%; }
+
+.blog .partial {
+  box-sizing: border-box;
+  width: 100%;
+  float: left;
+  padding-left: 1.25%;
+  padding-right: 1.25%;
+  background-color: #86bbe6;
+  display: inline-block; }
+
+.blog .partial:before, .blog .partial:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.blog .partial.entry {
+  box-sizing: border-box;
+  width: 66.66667%;
+  float: left;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%; }
+
+.blog .authors {
+  box-sizing: border-box;
+  width: 33.33333%;
+  float: right;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%;
+  background-color: #fabcad; }
+
 .hero {
   height: 600px;
   position: relative;
