--- a/statamic/_themes/main/partials/modal_contact.html
+++ b/statamic/_themes/main/partials/modal_contact.html
@@ -9,12 +9,10 @@
         <h2>More Than Mere Numbers</h2>
         <h3>Get in touch to make a more informed decision about your property with a Garfield Valuation</h3>
         <form>
-          <input placeholder="First Name" type="text">
-          <input placeholder="Last Name" type="text">
-          <input placeholder="Mobile Number" type="text">
-          <input placeholder="Office Number" type="text">
+          <input placeholder="Listing Address" type="text">
+          <input placeholder="First &amp; Last Name" type="text">
+          <input placeholder="Phone Number" type="text">
           <input placeholder="Email Address" type="text">
-          <input placeholder="Preferred Contact Time" type="text">
         </form>
       </div>
       <div class="modal-footer">
