--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -57,7 +57,7 @@
 			<h4>FEATURED PROPERTIES</h4>
 		</div>
 		<div class="container">
-			{{ entries:listing folder="properties/sale|properties/lease" conditions="featured" }}
+			{{ entries:listing folder="properties/sale|properties/lease" sort_by="random" }}
 				{{ theme:partial src="property_tile" use_context="true" }}
 			{{ /entries:listing }}
 		</div>
