--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -53,6 +53,9 @@
 @import 'modules/_quotes.scss';
 @import 'modules/_service_lists.scss';
 @import 'modules/_faq_list.scss';
+@import 'modules/_featured_post.scss';
+@import 'modules/_social.scss';
+
 
 // pages
 // @import 'pages/_landing.scss';
