--- a/src/scss/components/_blog_overview.scss
+++ b/src/scss/components/_blog_overview.scss
@@ -10,9 +10,9 @@
 		@include clearfix;
 		position: relative;
 	}
-	.full-width {
-		background-color: #f7d880;
-		@include span(full);
+	.featured {
+		background-color: $dark-seafoam-bg;
+		@include span(full no-gutter);
 		@include clearfix;
 	}
 	.news-left, .news-right {
@@ -36,6 +36,25 @@
 	.authors {
 		@include span(last 4 of 12);
 		background-color: #fabcad;
+	}
+	.entry {
+		.date,.author {
+			text-transform: none;
+			font-family: $header-font-extra-bold;
+			font-size: 14px;
+		}
+		.author {
+
+			color: $text-green;
+		}
+		p {
+			line-height: 28px;
+		}
+		.read-more {
+			font-size: 16px;
+			font-family: $header-font-family-medium-italic;
+			color: $text-green;
+		}
 	}
 }
 
