--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -83,11 +83,13 @@
 					<div class="open-house">
 						{{ if leased }}
 						<span>LEASED</span>
+						{{ elseif in_contract }}
+						<span>In Contract</span>
 						{{ elseif openhouse }}
 						{{ if openhouse_details }}
-						<span>Open House: {{ openhouse_details }}</span>
+						<span class="red">Open House: {{ openhouse_details }}</span>
 						{{ else }}
-						<span>Open House: Enquire for Details</span>
+						<span class="red">Open House: Enquire for Details</span>
 						{{ endif }}
 						{{ endif }}
 					</div>	
@@ -249,6 +251,12 @@
 					{{ summary_intro }}
 					<div style="display: none">{{ summary_full }}</div>
 					{{ if summary_full }}
+						<p class="small">
+							All information regarding property for sale, rental or financing is from sources deemed reliable, no representation is made, or is to be implied. As to the accuracy thereof and it is submitted subject to errors, omissions, change of price, rental or other conditions, prior sale, lease or financing, or withdrawal without notice.
+						</p>
+						<p class="small">
+							The information contained herein has either been given to us by the owner of the property or obtained from sources that we deem reliable. We have no reason to doubt its accuracy but we do not guarantee it. All zoning, buildable footages and uses must be independently verified. The value of this investment is dependent on these estimates and assumptions made above, as well as the investment income, the tax bracket, and other factors which you tax advisor and/or legal counsel should evaluate. The prospective buyer should carefully verify each item of income, and all other information herein.
+						</p>
 					<a class="expander-prev" href=""><i  class="fa fa-plus-circle green"></i><span>Read More</span></a>
 					{{ endif }}
 				</div>
