new download sections for property yamls

--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -22,11 +22,11 @@
 			</div>
 			<div class="dotted"></div>
 			<div class="agent property-downloads">
-				<a href="{{ specs }}" target="_blank">
+				<a href="{{ brochure }}" target="_blank">
 					{{ theme:partial src="svg/download" }}
 					<span>Download</span>
 				</a>
-				<a href=" {{ floorplans }}">
+				<a href="{{ floor_plans }}" target="_blank">
 					{{ theme:partial src="svg/floorplans" }}
 					<span>Floorplans</span>
 				</a>
